# Era-BMPC

./: .gitignore  README.md
cilqr_tree/: CMakeLists.txt  package.xml
cilqr_tree/config/: cilqr_tree.yaml  default.rviz
cilqr_tree/include/cilqr_tree/: cilqr_tree.h  constraints.h  eigen_types.h  ilqr_params.h  ilqr_tree.h  knotpoint_data.h  proj_hyperplane_box.h  solver_data.h  trajectory_tree_data.h
cilqr_tree/include/misc/: visualizer.h
cilqr_tree/launch/: cilqr_tree_node.launch
cilqr_tree/script/: plot_q_hist.py
cilqr_tree/src/: cilqr_tree_node.cpp
cilqr_tree/src/cilqr_tree/: constraints.cpp
simple_simulation/: CMakeLists.txt  package.xml  setup.py  simple_simulation_node copy.py  simple_simulation_node.py
simple_simulation/config/: behavior_planner.yaml  highway.yaml  intersection.yaml  sim_config.yaml
simple_simulation/launch/: intersection.launch  simulation.launch
simple_simulation/rviz/: intersection.rviz
simple_simulation/src/behavior_planner/: behavior_planner.py
simple_simulation/src/motion_control/: motion_control.py
simple_simulation/src/utils/: guideline.py  lat_ctrl.py  lon_ctrl.py  vehicle.py  visualization.py
vehicle_msgs/: CMakeLists.txt  package.xml
vehicle_msgs/msg/: DynObs.msg  DynObsPt.msg  Guideline.msg  Input.msg  LocalGuidelinePoint.msg  Scenario.msg  State.msg
vehicle_msgs/srv/: GetAction.srv  ReqMotionPrediction.srv  ResetMP.srv  UpdateVehicleStates.srv
